--- a/public/page.html
+++ b/public/page.html
@@ -65,7 +65,7 @@
     	<!--		<input type="text" class="form-control" id="usr" disabled value="40"/>-->
           </div> <!-- col-md-1-->
           <div class="col-md-9" align="right">      
-    			<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal" id="btnDetail">Modal</button>
+    			<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal" id="btnDetail" style="display:none">Modal</button>
           </div> <!-- col-md-1-->
           </div> <!--row6-->
       
@@ -153,7 +153,7 @@
                         <div class="modal-footer">
                         <!--  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
                      <!-- <button type="button" id="btnAssignOrder" class="btn btn-info" data-dismiss="modal" >OK</button> -->
-					  <button type="button" class="btn btn-default" data-dismiss="modal" onclick="clearModal()">Close</button>
+					  <button type="button" class="btn btn-default" data-dismiss="modal" onclick="clearModal()" >Close</button>
                         </div>
                       </div>
                     </div>
@@ -166,6 +166,8 @@
 	<script type="text/javascript">
 		
 		function loadData(token){
+
+			console.log("loadData "+token);
 			$("#loadingTeamDiv").addClass("ui loading form");
             $.ajax
             ({
@@ -181,8 +183,9 @@
                     if(data.status==1){
                         //ok
                         // binding
+						console.log("Found "+token);
 
-                        $("#fullname").html(data.teamname);
+                        $("#fullname").html(data.fullname);
 						$("#email").html(data.email);
 						$("#garena_id").html(data.garena_id);
 						$("#membertype").html(data.member_type);
@@ -191,7 +194,7 @@
                       $('#btnDetail').trigger( "click" );
                         
                     }else{
-
+						console.log("Notfound "+token);
                     }
                     clearloadingTeamDiv();
                 }
